# chess-engine

./: .gitignore  CMakeLists.txt
include/: bitboard.h  bitutil.h  constant.h  macro.h  rng.h  types.h
script/: bitboard.py  common.py  decldefi.py  doxy.py  generate.py  main.py
src/: bitboard.cpp
