cmake_minimum_required(VERSION 3.28)

project(chess-engine VERSION 1.0
                   DESCRIPTION "Chess Engine"
                   LANGUAGES CXX)

find_package(Python3 REQUIRED)

set(GLOBAL_FLAGS)
set(GLOBAL_STD 23)
set(CMAKE_CXX_STANDARD ${GLOBAL_STD})
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
list(APPEND GLOBAL_FLAGS "-std=c++${GLOBAL_STD}")

set(SRC_DIR ${CMAKE_SOURCE_DIR}/src)
set(INC_DIR ${CMAKE_SOURCE_DIR}/include)
set(SCRIPT_DIR ${CMAKE_SOURCE_DIR}/script)
set(GENSRC_DIR ${SRC_DIR}/generated)
set(GENINC_DIR ${INC_DIR}/generated)

add_compile_options(-Wall -Wextra -Wpedantic -Werror)
include_directories(${INC_DIR})

set(GENERATED_MOVES_ID "moves")
set(GENERATED_BITBOARD_ID "bitboard")

#pyh_get_filename(GENERATED_MOVES_STEM "${GENERATED_MOVES_ID}")
#pyh_get_filename(GENERATED_BITBOARD_STEM "${GENERATED_BITBOARD_ID}")

set(GENERATED_MOVES
    ${GENSRC_DIR}/${GENERATED_MOVES_ID}.cpp
    ${GENINC_DIR}/${GENERATED_MOVES_ID}.h
)
#set(GENERATED_BITBOARD
    #${SRC_DIR}/${GENERATED_BITBOARD_ID}.cpp
    #${GENINC_DIR}/${GENERATED_BITBOARD_ID}.h
#)

set(GENERATED_FILES_AND_FOLDERS
    ${GENSRC_DIR}
    ${GENINC_DIR}
    ${GENERATED_MOVES}
    #${GENERATED_BITBOARD}
)

add_library(generated_moves OBJECT ${GENERATED_MOVES})
#add_library(generated_bitboard INTERFACE ${GENERATED_BITBOARD})

list(JOIN GENERATED_MOVES " " GENERATED_MOVES_FILES_STR)
#list(JOIN GENERATED_BITBOARD " " GENERATED_BITBOARD_FILES_STR)

set(GENERATED_MANIFEST ${CMAKE_CURRENT_BINARY_DIR}/generated_manifest.txt)

set(GENERATED_MANIFEST_LIST
    "${GENERATED_MOVES_ID}|${GENERATED_MOVES_FILES_STR}"
    #"${GENERATED_BITBOARD_ID}|${GENERATED_BITBOARD_FILES_STR}"
)

list(JOIN GENERATED_MANIFEST_LIST "\n" GENERATED_MANIFEST_STR)
file(WRITE "${GENERATED_MANIFEST}" "${GENERATED_MANIFEST_STR}\n")

file(GLOB_RECURSE SCRIPT_PY_FILES CONFIGURE_DEPENDS "${SCRIPT_DIR}/*.py")
add_custom_command(
    OUTPUT ${GENERATED_FILES_AND_FOLDERS}
    COMMAND ${Python3_EXECUTABLE} ${SCRIPT_DIR}/main.py "${GENERATED_MANIFEST}" "${CMAKE_BINARY_DIR}/compile_commands.json" ${GLOBAL_FLAGS}
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    DEPENDS ${SCRIPT_PY_FILES}
    VERBATIM
)
add_custom_target(generate DEPENDS ${GENERATED_FILES_AND_FOLDERS})


