cmake_minimum_required(VERSION 3.28)

project(chess-engine VERSION 1.0
                   DESCRIPTION "Chess Engine"
                   LANGUAGES CXX)

find_package(Python3 REQUIRED)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(SRC_DIR ${CMAKE_SOURCE_DIR}/src)
set(INC_DIR ${CMAKE_SOURCE_DIR}/include)
set(SCRIPT_DIR ${CMAKE_SOURCE_DIR}/script)
set(GENSRC_DIR ${SRC_DIR}/generated)
set(GENINC_DIR ${INC_DIR}/generated)

add_compile_options(-Wall -Wextra -Wpedantic -Werror)
include_directories(${INC_DIR})

set(GENERATED_PRECOMPUTED_ID "precomputed")

set(GENERATED_PRECOMPUTED
    ${GENINC_DIR}/${GENERATED_PRECOMPUTED_ID}.h
)

set(GENERATED_FILES_AND_FOLDERS
    ${GENSRC_DIR}
    ${GENINC_DIR}
    ${GENERATED_PRECOMPUTED}
)

list(JOIN GENERATED_PRECOMPUTED " " GENERATED_PRECOMPUTED_FILES_STR)
set(GENERATED_MANIFEST ${CMAKE_CURRENT_BINARY_DIR}/generated_manifest.txt)
set(GENERATED_MANIFEST_LIST
    "${GENERATED_PRECOMPUTED_ID}|${GENERATED_PRECOMPUTED_FILES_STR}"
)

list(JOIN GENERATED_MANIFEST_LIST "\n" GENERATED_MANIFEST_STR)
file(WRITE "${GENERATED_MANIFEST}" "${GENERATED_MANIFEST_STR}\n")

file(GLOB_RECURSE SCRIPT_PY_FILES CONFIGURE_DEPENDS "${SCRIPT_DIR}/*.py")
add_custom_command(
    OUTPUT ${GENERATED_FILES_AND_FOLDERS}
    COMMAND ${Python3_EXECUTABLE} ${SCRIPT_DIR}/main.py "${GENERATED_MANIFEST}"
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    DEPENDS ${SCRIPT_PY_FILES}
    VERBATIM
)
add_custom_target(generate DEPENDS ${GENERATED_FILES_AND_FOLDERS})



